src/components/App/style.scss
.root {
  // @TODO: Load font
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  max-height: 100vh;
}

.root_loading {
  display: flex;
  height: 100vh;
  width: 100vw;
  align-items: center;
  justify-content: center;
  background-color: #eeeeee;
}

.container {
  height: 100vh;
  max-height: 100vh;
  width: 100vw;
  max-width: 100vw;
  display: flex;
  flex-direction: column;
  flex-wrap: no-wrap;
  flex-grow: 1;
  overflow: hidden;
  display: grid;
  grid-template-areas: 'canvas sidebar' 'toolbar toolbar';
  grid-template-columns: 1fr auto;
  grid-template-rows: 1fr auto;

  .menu {
  }

  .command_palette {
  }

  .toolbar {
    grid-area: toolbar;
  }

  .canvas {
    grid-area: canvas;
  }

  .sidebar {
    grid-area: sidebar;
    max-height: 100%;
    overflow: hidden;
    &_hidden {
      width: 0;
      display: none;
    }
    width: 25vw;
    max-width: 25vw;
    flex-grow: 0;

    .selector {
      flex-grow: 0;
      width: 100%;
    }
    .stepper {
      flex-grow: 1;
      max-height: 100%;
    }
  }
}

